adicionei uma palavra

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,6 +11,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
          Ex ea quam veniam, sequi aliquam tenetur quae quaerat 
          quos neque dignissimos voluptatum. Quod magnam esse
-          dolorem est tenetur corrupti, animi maiores?</p>
+          dolorem est tenetur corrupti, animi maiores? alteração</p>
 </body>
 </html>
